@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+1/24/12
+    - Added option to makeJac() to return full Jacobian instead of
+      reduced version used in Newton power flow updates.
+
 1/16/12
     - Added new function gurobiver() for retreiving/printing Gurobi
       and Gurobi_MEX version information, since it is used multiple
